# pytest-monte-carlo

./: .pylintrc  README.md  pyproject.toml  src
.github/workflows/: ci.yml
pytest_monte_carlo/: plugin.py
scripts/: ci
tests/: test__init__.py
